business-website/business-website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: business-website
  namespace: business-website
spec:
  selector:
    app: business-website
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
